--- a/src/components/cookie/CookieBanner.module.css
+++ b/src/components/cookie/CookieBanner.module.css
@@ -206,9 +206,14 @@
 }
 
 .toggle input {
+  appearance: none;
+  -webkit-appearance: none;
+  position: absolute;
   opacity: 0;
   width: 0;
   height: 0;
+  margin: 0;
+  padding: 0;
 }
 
 .slider {
